scode/TeamDigital/prob18/error.txt
main.cpp: In function 'int main()':
main.cpp:80:41: error: invalid conversion from 'int' to 'const char*' [-fpermissive]
   80 |         printf(getTotalNumberOfSequences(m, n));
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                         |
      |                                         int
In file included from main.cpp:32:
/usr/include/stdio.h:356:43: note:   initializing argument 1 of 'int printf(const char*, ...)'
  356 | extern int printf (const char *__restrict __format, ...);
      |                    ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
main.cpp:80:15: warning: format not a string literal and no format arguments [-Wformat-security]
   80 |         printf(getTotalNumberOfSequences(m, n));
      |         ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
